# mico_inspector

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  _basic_types_8h_source.html  _bo_w_8h_source.html  _bundle_adjuster_8h_source.html  _bundle_adjuster__g2o_8h_source.html  _bundle_adjuster_cvsba_8h_source.html  _bundle_adjuster_ros_8h_source.html  _cluster_frames_8h_source.html  _color_cluster_space_8h_source.html  _color_clustering_8h_source.html  _color_space_h_s_v8_8h_source.html  _colors_8h_source.html  _corpus_8h_source.html  _data_frame_8h_source.html  _database_8h_source.html  _document_8h_source.html  _environment_map_8h_source.html  _extended_kalman_filter_8h_source.html  _feature_model_8h_source.html  _feature_object_tracker_8h_source.html  _g_m_m_e_m_8h_source.html  _graph2d_8h_source.html  _gui_8h_source.html  _image_features_manager_8h_source.html  _json_iterator_8h_source.html  _log_manager_8h_source.html  _loop_closure_detector_8h_source.html  _loop_closure_detector_dorian_8h_source.html  _neuronal_network_8h_source.html  _o_r_bextractor_8h_source.html  _odometry_8h_source.html  _odometry_rgbd_8h_source.html  _parallel_feature_matcher_8h_source.html  _particle_filter_c_p_u_8h_source.html  _polynomial_8h_source.html  _ransac_p2_p_8h_source.html  (+424 more)
.circleci/: config.yml
cmake/modules/: FindCSparse.cmake  FindDarknet.cmake  FindG2O.cmake  Findcvsba.cmake  Findlibfreenect.cmake  libfreenectConfig.cmake
cmake/templates/: mico-config.cmake.in
doc/: mainpage.dox
doc/examples/: camera_selector.cpp  color_clustering.dox  ekf.dox  graph_plot.cpp  json.cpp  logger.cpp  particle_filter.dox  particle_filter_2d.dox  particle_filter_3d.dox
examples/: CMakeLists.txt
examples/ba/: main.cpp
examples/bundle_adjustment/: main.cpp
examples/hal/imu-pololu/: minimu9-ahrs.cpp
examples/ml/bow/: main.cpp
examples/ml/classification/: example_topic_modeling.cpp
examples/slam/: main.cpp
examples/slam/ConfigFiles/: freiburg1_360.json  freiburg1_floor.json  freiburg1_room.json  freiburg1_xyz.json  freiburg2_360_kidnap.json  freiburg2_desk.json  freiburg2_desk_person.json  freiburg2_large_loop.json  freiburg2_pioneer.json  freiburg2_xyz.json  freiburg3_long_office.json  freiburg3_nstr_tx.json  freiburg3_teddy.json  freiburg_desk.json  freiburg_desk1.json  grecia_1.json  living_room.json  microsoft_1.json  rosbag.json  sevilla_dnn.json  sevilla_f3_1.json
examples/slam/slam_mark_I/: main.cpp
examples/state_filtering/ekf/: filtro_euler.cpp  filtro_euler_pololy.cpp  main.cpp  mainPose _pqr.cpp  mainPose.cpp  prueba_lectura.cpp
examples/state_filtering/particle_filter/: Robot.cpp  Robot.h  main.cpp
include/rgbd_tools/: StereoCamera.h  StereoCamera.inl  rgbd_tools.h
modules/base/: CMakeLists.txt  mico-base-config.cmake.in  package.xml
modules/base/tools/: CMakeLists.txt
modules/base/tools/dataset_recorder/: config_realsense.json  main.cpp
modules/base/tools/feature_cloud_extractor/: configRealSense.json  main.cpp
modules/base/tools/feature_object_tracking/: main.cpp
modules/base/tools/ros_publisher/: config_realsense.json  main.cpp
modules/base/tools/scripts/ml/: drawDocuments.m  drawTriangleDocs.m  lda.txt  lda_new.txt  loadResults.m  plotLdaAnalysis.m
modules/base/tools/yolo_detector/: main.cpp
modules/base/tools/yolo_detector_cl/: main.cpp
modules/dnn/: CMakeLists.txt  mico-dnn-config.cmake.in
modules/dnn/tools/: CMakeLists.txt
modules/dnn/tools/scripts/ml/: drawLineDocs.m  drawTetraDocs.m  loadParams.m  multiperformanceanalysis.m  octave-workspace  plotAnalysis.m  singlePerformanceAnalysis.m
modules/dnn/tools/yolo_detector/: main.cpp
modules/dnn/tools/yolo_detector_cl/: main.cpp
modules/flow/: CMakeLists.txt  mico-flow-config.cmake.in
modules/kids/: CMakeLists.txt  mico-kids-config.cmake.in
modules/kids/app/: slam4kids.cpp
modules/kids/include/mico/kids/: Slam4KidsManager.h
modules/kids/include/mico/kids/blocks/: CastBlocks.h  MicoFlowBlock.h  MicoFlowBlock.inl  MicoFlowStreamer.h  MicoFlowStreamer.inl  TextSourceDataModel.hpp
modules/kids/include/mico/kids/code_generation/: CodeGenerator.h
modules/kids/include/mico/kids/data_types/: StreamerPipeInfo.hpp
modules/kids/src/: Slam4KidsManager.cpp  mico4kids.cpp
modules/kids/src/blocks/: TextSourceDataModel.cpp
modules/kids/src/code_generation/: CodeGenerator.cpp
modules/kids/src/qt_customs/: CollapsibleSection.cpp
rgbd_tools/: EnvironmentMap.cpp  EnvironmentMap.h  StereoCamera.cpp  StereoCamera.h  StereoCamera.inl
rgbd_tools/StereoCameras/: ParallelFeatureMatcher.cpp  StereoCameraCustom.cpp  StereoCameraCustom.h  StereoCameraEVA.cpp  StereoCameraEVA.h  StereoCameraKinect.cpp  StereoCameraKinect.h  StereoCameraKinect.inl  StereoCameraRealSense.cpp  StereoCameraRealSense.h  StereoCameraRealSense.inl  StereoCameraVirtual.cpp  StereoCameraVirtual.h  StereoCameraVirtual.inl  StereoCameraZED.cpp  StereoCameraZED.h
scripts/: LogParser.py  fix_g20.sh  fix_vtk.sh  g2o_plotter.py  install_dependencies.sh  install_dependencies_ci.sh  install_dependencies_circleci.sh  install_librealsense2.sh  parse_script.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+31 more)
src/: StereoCamera.cpp
src/cjson/: json.cpp  (+2 more)
tools/: CMakeLists.txt
tools/dataset_recorder/: config_realsense.json  main.cpp
tools/feature_cloud_extractor/: config_dataset.json  main.cpp
tools/feature_object_tracking/: CalibrationFile.xml  crawler_model_Q1.xml  crawler_model_Q1_2.xml  crawler_model_large_2.xml  main.cpp  model_crawler_simple_5_fix.xml  sampleCrawler.json
tools/ros_publisher/: main.cpp
tools/yolo_detector/: main.cpp
tools/yolo_detector_cl/: main.cpp
(+479 files in other folders)
